--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
+    "start": "parcel",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "devDependencies": {
     "parcel": "^2.15.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17"
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
