22- cross env issue fixed

--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "type": "commonjs",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html",
+    "build": "cross-env TEMP=D:\\temp TMP=D:\\temp parcel build index.html",
     "test": "jest",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "gh-pages": "^6.3.0",
     "parcel": "^2.15.1",
     "postcss": "^8.5.3",
